# IOT-527-Plantation-Protection

./: README.md  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js  dashboard.css  dashboard.js  firebase.js
frontend/src/pages/: gps.js  graphs.js  heatMaps.js
server/: main.py  requirements.txt
