[tool.poetry]
name = "iot-527-plantation-protection"
version = "0.1.0"
description = ""
authors = ["SVyusti <vyusti2083@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
